[gd_scene load_steps=4 format=3 uid="uid://xlmyyax8n246"]

[ext_resource type="Script" uid="uid://d3gddyw0jlrsj" path="res://scripts/InventoryRow.gd" id="1_pxgnl"]
[ext_resource type="Texture2D" uid="uid://c7gqk6i0pvsmr" path="res://assets/placeholder_ingredient.png" id="2_pxgnl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u0lyg"]
bg_color = Color(0.109804, 0.109804, 0.109804, 0.376471)

[node name="InventoryRow" type="PanelContainer"]
custom_minimum_size = Vector2(200, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -60.0
offset_right = 227.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_u0lyg")
script = ExtResource("1_pxgnl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 100)
layout_mode = 2

[node name="SideCourse" type="TextureRect" parent="MarginContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
texture = ExtResource("2_pxgnl")
stretch_mode = 5

[node name="MainCourse" type="TextureRect" parent="MarginContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_pxgnl")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ItemName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Dish name"

[node name="StatLabel1" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "+10 Health Regen"

[node name="StatLabel2" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "+10 Health Regen"

[node name="StatLabel3" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "+10 Health Regen"

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Quantity" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "3"

[node name="Button" type="Button" parent="."]
layout_mode = 2
flat = true
